Changes to be committed: 	modified:   README.md 	renamed:    notebooks/graphics-mass-spectrometry/ESI-positive.jpg -> notebooks/images/ESI-positive.jpg 	renamed:    notebooks/graphics-mass-spectrometry/MALDI-target.jpg -> notebooks/images/MALDI-target.jpg 	renamed:    notebooks/graphics-mass-spectrometry/block-diagrams.png -> notebooks/images/block-diagrams.png 	renamed:    notebooks/graphics-mass-analyzers/continuous-dynode.jpg -> notebooks/images/continuous-dynode.jpg 	renamed:    notebooks/graphics-mass-analyzers/dynode-detectors.jpg -> notebooks/images/dynode-detectors.jpg 	renamed:    notebooks/graphics-mass-spectrometry/generic-mass-spectrum.png -> notebooks/images/generic-mass-spectrum.png 	renamed:    notebooks/graphics-mass-spectrometry/hydroxycinnamic_acid.svg -> notebooks/images/hydroxycinnamic_acid.svg 	new file:   notebooks/images/maldi-preparation.jpg 	renamed:    notebooks/graphics-mass-analyzers/saddle.png -> notebooks/images/saddle.png 	renamed:    notebooks/graphics-mass-spectrometry/sinapic_acid.png -> notebooks/images/sinapic_acid.png 	modified:   notebooks/mass-analyzers.ipynb 	modified:   notebooks/mass-spectrometry.ipynb 	new file:   notebooks/test.ipynb

--- a/notebooks/mass-spectrometry.ipynb
+++ b/notebooks/mass-spectrometry.ipynb
@@ -7,6 +7,8 @@
     "# Mass Spectrometry\n",
     "## Learning Objectives\n",
     "- Draw a block diagram of a mass spectrometer.\n",
+    "- Calculate the nominal, monoisotopic, and average masses of an ion based on its elemental composition.\n",
+    "- Describe the mechanism of ion formation in matrix-assisted laser desorption ionization, electrospray ionization, and electron impact ionization.\n",
     "\n"
    ]
   },
@@ -17,7 +19,7 @@
     "## What Is Mass Spectrometry?\n",
     "Mass spectrometry (MS) is a technique in which analytes in a sample are analyzed as gas-phase ions. \n",
     " \n",
-    "![Features of a mass spectrum](graphics-mass-spectrometry/generic-mass-spectrum.png)\n",
+    "![Features of a mass spectrum](images/generic-mass-spectrum.png)\n",
     "\n",
     "**Figure 1.** The axes of a mass spectrum, explained.\n",
     "\n"
@@ -39,12 +41,12 @@
     "| O | 16 |\n",
     "\n",
     "### Monoisotopic Mass\n",
-    "The exact mass of the lightest stable isotope of each element.\n",
+    "The exact mass of the lightest stable isotope of each element. Note that by definition the monoisotopic mass of carbon is exactly 12 Da.\n",
     "\n",
     "| Element | Mass/Da |\n",
     "| :--- | ---: |\n",
     "| H | 1.00783 |\n",
-    "| C | 12 (by definition) |\n",
+    "| C | 12 |\n",
     "| N | 14.0031 |\n",
     "| O | 15.9949 |\n",
     "\n",
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +122,7 @@
     "## Three Common Examples of Mass Spectrometers\n",
     "A **block diagram** represents the principal parts or functions of an instrument using blocks and represents the relationship between the blocks using arrows.\n",
     "\n",
-    "![Diagrams showing the relations between the ionization source, mass analyzer, and detector in common mass spectrometers.](graphics-mass-spectrometry/block-diagrams.png)\n",
+    "![Diagrams showing the relations between the ionization source, mass analyzer, and detector in common mass spectrometers.](images/block-diagrams.png)\n",
     "\n",
     "**Figure 2.** Block diagrams for three common examples of mass spectrometers. MALDI stands for “matrix-assisted laser-desorption ionization,” which will be described below. "
    ]
@@ -132,8 +134,9 @@
     "## Matrix-Assisted Laser Desorption Ionization\n",
     "Samples for MALDI are prepared by creating a slurry of the matrix, the analyte, and a volatile solvent; this slurry is spotted onto a target (typically a stainless steel plate) and the solvent evaporates prior to analysis. The specific matrix molecule is selected for a specific application. For example, α-cyano-4-hydroxycinnamic acid is commonly used for the analysis of peptides, lipids, and nucleic acids, whereas sinapinic acid (3,5-dimethoxy-4-hydroxycinnamic acid) is commonly used for the analysis of large peptides, whole proteins, and lipids.  \n",
     "\n",
-    "![structure of α-cyano-4-hydroxycinnamic acid](graphics-mass-spectrometry/hydroxycinnamic_acid.svg)\n",
-    "![structure of sinapinic acid](graphics-mass-spectrometry/sinapic_acid.png)\n",
+    "![structure of α-cyano-4-hydroxycinnamic acid](images/hydroxycinnamic_acid.svg)\n",
+    "\n",
+    "![structure of sinapinic acid](images/sinapic_acid.png)\n",
     "**Figure 4.** (*top*) α-cyano-4-hydroxycinnamic acid and (*bottom*) sinapinic acid are each commonly used as MALDI matrix molecules. Each of these molecules contains significant conjugation, which readily absorbs UV light, and a carboxylic acid, which makes it a good proton donor in the gas phase. Images from Wikimedia Commons."
    ]
   },
@@ -144,8 +147,11 @@
     "### Spotting a Sample and Ionization\n",
     "During analysis, this “spotted sample” is transferred into the vacuum system of the instrument and irradiated with UV light, which induces the transfer and ionization of analytes in the resulting plume. Depending on whether experiments are performed in positive or negative ionization modes, MALDI yields almost exclusively $[M+H]^{+}$ cations or $[M–H]^{–}$ anions, respectively.\n",
     "\n",
-    "![Photograph of a MALDI plate with 384 spots.](graphics-mass-spectrometry/MALDI-target.jpg)\n",
-    "**Figure 5.** A photograph of a MALDI target. This target has the same dimensions as a 384-well plate, which makes it amenable for workflows with automated sample handling. Image from Kermit Murray / Wikimedia Commons."
+    "![Photograph of a MALDI plate with 384 spots.](images/MALDI-target.jpg)\n",
+    "**Figure 5.** A photograph of a MALDI target. This target has the same dimensions as a 384-well plate, which makes it amenable for workflows with automated sample handling. Image from Kermit Murray / Wikimedia Commons.\n",
+    "\n",
+    "![Photograph of sample deposition in MALDI.](images/maldi-preparation.jpg)\n",
+    "**Figure 6.** Sample preparation for MALDI. (*upper*) Pipetting of 1 μl of sample–matrix solution onto a standard MALDI target. (*lower*) Same spots after DHB has crystallized show large crystals on the rim and evenly distributed small crystals in the center. Figure and caption from [Dr. Jürgen H. Gross](https://ms-textbook.com/for-instructors/)."
    ]
   },
   {
@@ -153,9 +159,9 @@
    "metadata": {},
    "source": [
     "## Electrospray Ionization\n",
-    "![Diagram of electrospray ionization](graphics-mass-spectrometry/ESI-positive.jpg)  \n",
+    "![Diagram of electrospray ionization](images/ESI-positive.jpg)  \n",
     "\n",
-    "**Figure 6.** Electrospray ionization in “positive ion mode”. The electrospray capillary is held at a high potential (typically 1-5 kV) relative to the atmospheric-pressure inlet of the mass spectrometer. Electrochemistry of the liquid sample results in the formation of excess charges. The coulombic repulsion of those excess charges overcomes the surface tension of the liquid, which results in the formation of a Taylor cone and the expulsion of highly charged droplets. Those droplets undergo desolvation and fission, which eventually results in the formation of gas-phase ions. [Figure Source](https://en.wikipedia.org/wiki/Electrospray_ionization). \n",
+    "**Figure 7.** Electrospray ionization in “positive ion mode”. The electrospray capillary is held at a high potential (typically 1-5 kV) relative to the atmospheric-pressure inlet of the mass spectrometer. Electrochemistry of the liquid sample results in the formation of excess charges. The coulombic repulsion of those excess charges overcomes the surface tension of the liquid, which results in the formation of a Taylor cone and the expulsion of highly charged droplets. Those droplets undergo desolvation and fission, which eventually results in the formation of gas-phase ions. [Figure Source](https://en.wikipedia.org/wiki/Electrospray_ionization). \n",
     "\n",
     "Electrospray ionization results in even-electron ions that are proton rich, e.g., $[M+H]^{+}$ or $[M+nH]^{+n}$ in positive mode, or proton deficient, e.g., $[M-H]^{-}$ or $[M-nH]^{-n}$ in negative mode. The formation of multiply charged ions is common for analytes with higher masses, e.g., synthetic polymers and proteins, whereas the formation of singly charged ions is common for small mocules."
    ]
@@ -166,6 +172,7 @@
    "source": [
     "## Electron Impact (EI) Ionization\n",
     "In electronic impact (EI) ionization, the analyte $M$ (specifically, the vapor of the analyte) is reacted with a high-energy electron (the primary electron, $e_{1}^{-}$). This yields the radical cation of the molecule and a secondary electron ($e_{2}^{-}$):  \n",
+    "\n",
     "$M + e_{1}^{-}(70 eV) \\rightarrow M^{+\\cdot} +e_{2}^{-} + e_{1}^{-}(\\ll70 eV)$  \n",
     "\n",
     "Some notes:\n",
@@ -173,16 +180,6 @@
     "- EI is very common in the analysis of pure, volatile samples. Therefore, it is a great match for analyzing the eluent of gas chromatography (GC).\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -201,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
