Changes to be committed: 	deleted:    notebooks/images/MALDI-target.jpg 	deleted:    notebooks/images/dynode-detectors.jpg 	deleted:    notebooks/images/hydroxycinnamic_acid.svg 	deleted:    notebooks/images/sinapic_acid.png 	modified:   notebooks/mass-analyzers.ipynb 	modified:   notebooks/mass-spectrometry.ipynb

--- a/notebooks/mass-analyzers.ipynb
+++ b/notebooks/mass-analyzers.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "## Quadrupolar Field\n",
     "![Potential of a quadrupolar field](images/saddle.png)\n",
-    "**Figure 3.** The potential of a quadrupolar field. At any instant in time, ions are attracted to the poles that have the opposite polarity and repelled by the poles that have the same polarity. As a function of time, this saddle rotates about the axis of the quadrupole ion guide because of the oscillations of the applied potentials.  (Figure from March. *J. Mass Spectrom.* **1997**, *32*, 351. [Link](https://doi.org/10.1002/(SICI)1096-9888(199704)32:4%3C351::AID-JMS512%3E3.0.CO;2-Y))"
+    "**Figure 3.** The potential of a quadrupolar field. At any instant in time, ions are attracted to the poles that have the opposite polarity and repelled by the poles that have the same polarity. As a function of time, this saddle rotates about the axis of the quadrupole ion guide because of the oscillations of the applied potentials.  (Figure reproduced from March. *J. Mass Spectrom.* **1997**, *32*, 351. [Link](https://doi.org/10.1002/(SICI)1096-9888(199704)32:4%3C351::AID-JMS512%3E3.0.CO;2-Y))"
    ]
   },
   {
@@ -124,11 +124,11 @@
     "- A discrete dynode detector is a type of **electron multiplier**. The other common electron multipliers are the continuous dynode detector and photomultipier tubes.\n",
     "- Discrete dynode and continuous dynode detectors are the most common detectors on tandem quadrupole and ion trap MS systems.\n",
     "\n",
-    "![Diagram of discrete and continuous dynode detectors](images/dynode-detectors.jpg)\n",
-    "**Figure 9.** Principle of operation of discrete and continuous dynode electron multipliers.  In mass spectrometry, ions exiting the mass analyzer are collided with the beginning of the detector, which induces the formation of secondary electrons that are then amplified prior to measurement using a Faraday detector. Image from Wikimedia Commons.\n",
+    "![Diagram of discrete and continuous dynode detectors](https://upload.wikimedia.org/wikipedia/commons/c/c0/Discrete_and_Continuous_Dynode_Systems.jpg)\n",
+    "**Figure 9.** Principle of operation of discrete and continuous dynode electron multipliers.  In mass spectrometry, ions exiting the mass analyzer are collided with the beginning of the detector, which induces the formation of secondary electrons that are then amplified prior to measurement using a Faraday detector. [Image](https://commons.wikimedia.org/wiki/File:Discrete_and_Continuous_Dynode_Systems.jpg) reproduced from Wikimedia Commons.\n",
     "\n",
     "![Photograph of a continuous dynode detector](images\\continuous-dynode.jpg)\n",
-    "**Figure 10.** Ions or electrons from a conversion dynode would enter from the left side of this continuous dynode detectors. Amplification of secondary electrons occurs down the bent tube. Image from [MS-Textbook](https://ms-textbook.com/for-instructors/)."
+    "**Figure 10.** Ions or electrons from a conversion dynode would enter from the left side of this continuous dynode detectors. Amplification of secondary electrons occurs down the bent tube. Image repduced from [MS-Textbook](https://ms-textbook.com/for-instructors/)."
    ]
   },
   {
@@ -184,7 +184,7 @@
     "A **multichannel plate detector (MCP)** is a planar electron multiplier consisting of millions of microscopic channels, each acting as an independent electron multiplier to amplify signals.\n",
     "\n",
     "![Multichannel plate detector](https://www.rp-photonics.com/img/microchannel_plate.webp)  \n",
-    "**Figure 10.** Diagram of a multichannel plate detector. Image from [RP Photonics](https://www.rp-photonics.com/microchannel_plates.html).\n",
+    "**Figure 10.** Diagram of a multichannel plate detector. Image reproduced from [RP Photonics](https://www.rp-photonics.com/microchannel_plates.html).\n",
     "\n",
     "Relative to discrete and continuous dynode detectors, time-of-flight (TOF) MS systems benefit from the following properties of MCP detectors:\n",
     "- MCPs have large surfaces (cm instead of mm), which enables high duty cycle measurements (a larger fraction of the ion beam can be sampled in experiments with orthogonal acceleration).\n",
