--- a/notebooks/mass-spectrometry.ipynb
+++ b/notebooks/mass-spectrometry.ipynb
@@ -39,6 +39,7 @@
     "| C | 12 |\n",
     "| N | 14 |\n",
     "| O | 16 |\n",
+    "| S | 32 |\n",
     "\n",
     "### Monoisotopic Mass\n",
     "The exact mass of the lightest stable isotope of each element. Note that by definition the monoisotopic mass of carbon is exactly 12 Da.\n",
@@ -49,6 +50,7 @@
     "| C | 12 |\n",
     "| N | 14.0031 |\n",
     "| O | 15.9949 |\n",
+    "| S | 31.9721 |\n",
     "\n",
     "### Relative Abundances\n",
     "The abundance of each isotope, relative to the lightest stable isotope.\n",
@@ -59,6 +61,7 @@
     "| C | 100% | 1.1% | n/a |\n",
     "| N | 100% | 0.34% | n/a |\n",
     "| O | 100% | 0.04% | 0.20% |\n",
+    "| S | 100% | 0.79% | 4.47% |\n",
     "\n",
     "### Average Mass\n",
     "The average of the masses of all isotopes, weighted by their relative abundance.\n",
@@ -119,6 +122,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### The Mass of Caffeine\n",
+    "Below is a simulated mass spectrum of caffeine, which has the elemental composition $C_{8}H_{10}N_{4}O_{2}$.The most intense peak in the spectrum corresponds to the monoisotopic peak, i.e., the lightest stable isotope of each element. On the scale of this plot, the nominal, monoisotopic, and average masses are similar in overall magnitude, but note the direction of the bias between nominal and average masses relative to that of the peak in the spectrum (the monoisotopic mass).\n",
+    "\n",
+    "![A simulated mass spectrum of caffeine.](https://upload.wikimedia.org/wikipedia/commons/d/d7/Caffeine_mass.gif)  \n",
+    "**Figure tk.** A simulated mass spectrum of caffeine. The most intense peak in the spectrum corresponds to the monoisotopic peak, i.e., the lightest stable isotope of each element. Note the differences between the nominal, monoisotopic, and average masses of this ion. Image reproduced from Kermit Murray."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Mass of Glucagon\n",
+    "Below is a simulated mass spectrum of glucagon, which has the elemental composition $C_{153}H_{224}N_{42}O_{50}$. First, compare this spectrum with that of caffeine. Note:\n",
+    "- The monoisotopic peak is not the most intense. Hypothesize the cause of this phenomenon based on the elemental composition and the relative abundances of the isotopes of these elements.\n",
+    "\n",
+    "![Simulated mass spectrum of glucagon.](https://upload.wikimedia.org/wikipedia/commons/6/6f/Glucagon_mass.gif)\n",
+    "**Figure tk.** A simulated mass spectrum of glucagon, which is a hormone that helps regulate blood sugar levels. Note the differences betweeen the nominal, monoisotopic, and average masses of this ion. Image reproduced from Kermit Murray."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Three Common Examples of Mass Spectrometers\n",
     "A **block diagram** represents the principal parts or functions of an instrument using blocks and represents the relationship between the blocks using arrows.\n",
     "\n",
@@ -134,9 +160,9 @@
     "## Matrix-Assisted Laser Desorption Ionization\n",
     "Samples for MALDI are prepared by creating a slurry of the matrix, the analyte, and a volatile solvent; this slurry is spotted onto a target (typically a stainless steel plate) and the solvent evaporates prior to analysis. The specific matrix molecule is selected for a specific application. For example, α-cyano-4-hydroxycinnamic acid is commonly used for the analysis of peptides, lipids, and nucleic acids, whereas sinapinic acid (3,5-dimethoxy-4-hydroxycinnamic acid) is commonly used for the analysis of large peptides, whole proteins, and lipids.  \n",
     "\n",
-    "![structure of α-cyano-4-hydroxycinnamic acid](images/hydroxycinnamic_acid.svg)\n",
+    "![structure of α-cyano-4-hydroxycinnamic acid](https://upload.wikimedia.org/wikipedia/commons/7/7c/Alpha-cyano-4-hydroxycinnamic_acid.svg)\n",
     "\n",
-    "![structure of sinapinic acid](images/sinapic_acid.png)\n",
+    "![structure of sinapinic acid](https://upload.wikimedia.org/wikipedia/commons/4/47/Sinapic_acid.png)\n",
     "**Figure 4.** (*top*) α-cyano-4-hydroxycinnamic acid and (*bottom*) sinapinic acid are each commonly used as MALDI matrix molecules. Each of these molecules contains significant conjugation, which readily absorbs UV light, and a carboxylic acid, which makes it a good proton donor in the gas phase. Images from Wikimedia Commons."
    ]
   },
@@ -147,7 +173,7 @@
     "### Spotting a Sample and Ionization\n",
     "During analysis, this “spotted sample” is transferred into the vacuum system of the instrument and irradiated with UV light, which induces the transfer and ionization of analytes in the resulting plume. Depending on whether experiments are performed in positive or negative ionization modes, MALDI yields almost exclusively $[M+H]^{+}$ cations or $[M–H]^{–}$ anions, respectively.\n",
     "\n",
-    "![Photograph of a MALDI plate with 384 spots.](images/MALDI-target.jpg)\n",
+    "![Photograph of a MALDI plate with 384 spots.](https://upload.wikimedia.org/wikipedia/commons/5/56/MALDI_384_spot_target.jpg)\n",
     "**Figure 5.** A photograph of a MALDI target. This target has the same dimensions as a 384-well plate, which makes it amenable for workflows with automated sample handling. Image from Kermit Murray / Wikimedia Commons.\n",
     "\n",
     "![Photograph of sample deposition in MALDI.](images/maldi-preparation.jpg)\n",
@@ -159,7 +185,7 @@
    "metadata": {},
    "source": [
     "## Electrospray Ionization\n",
-    "![Diagram of electrospray ionization](images/ESI-positive.jpg)  \n",
+    "![Diagram of electrospray ionization](https://upload.wikimedia.org/wikipedia/commons/d/d1/ESI_positive_mode_%2821589986840%29.jpg)  \n",
     "\n",
     "**Figure 7.** Electrospray ionization in “positive ion mode”. The electrospray capillary is held at a high potential (typically 1-5 kV) relative to the atmospheric-pressure inlet of the mass spectrometer. Electrochemistry of the liquid sample results in the formation of excess charges. The coulombic repulsion of those excess charges overcomes the surface tension of the liquid, which results in the formation of a Taylor cone and the expulsion of highly charged droplets. Those droplets undergo desolvation and fission, which eventually results in the formation of gas-phase ions. [Figure Source](https://en.wikipedia.org/wiki/Electrospray_ionization). \n",
     "\n",
