Changes to be committed: 	new file:   notebooks/exported-html/signals-and-noise.html 	new file:   notebooks/exported-pdf/signals-and-noise.pdf 	modified:   notebooks/signals-and-noise.ipynb

--- a/notebooks/signals-and-noise.ipynb
+++ b/notebooks/signals-and-noise.ipynb
@@ -474,7 +474,7 @@
     "$$f(x) = \\frac{1}{\\sqrt{2\\pi\\sigma^2} } e^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}$$\n",
     "where $\\mu$ is the central value of the distribution and $\\sigma$ is the standard deviation of the distrubtion.\n",
     "\n",
-    "![Properties of a normal distribution.](https://upload.wikimedia.org/wikipedia/commons/3/3a/Standard_deviation_diagram_micro.svg \"From Wikimedia Commons\")\n",
+    "![Normal distribution](https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/The_Normal_Distribution.svg/2560px-The_Normal_Distribution.svg.png)\n",
     "\n",
     "From Wikimedia Commons."
    ]
