--- a/notebooks/transducers.ipynb
+++ b/notebooks/transducers.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "*Voltage*: The sum of the potential differences (voltages) around any closed loop is zero.\n",
     "\n",
-    "### Power Lab\n",
+    "### Power Law\n",
     "\n",
     "$$ P = I \\cdot V = I^2 \\cdot R = \\frac {V^2}{R} $$\n",
     "where $P$ is the power in watts dissipated by a resistive element."
@@ -111,7 +111,7 @@
     "\n",
     "![sine-waves](./transducers-images/11_ch02_Fig07.jpg)\n",
     "\n",
-    "**Figure 2.** Sine wave with different amplitudes and with a phase difference of 90 degree or $\\frac{pi}{2}$ radians."
+    "**Figure 2.** Sine wave with different amplitudes and with a phase difference of 90 degree or $\\frac{\\pi}{2}$ radians. Reproduced from Skoog."
    ]
   },
   {
@@ -122,13 +122,13 @@
     "\n",
     "Capacitance is a property that describes the ability of an object to store electric charge. A capacitor is a device that stores electrical energy by accumulating that charges on two closely spaced surfaces that are insulated from each other. A capacitor can store an electrical charge for a period of time and then provide that charge when needed. \n",
     "\n",
-    "$$ time \\. constant = R \\cdot C $$\n",
+    "$$ time \\, constant = R \\cdot C $$\n",
     "\n",
     "The time constant is a measure of the time required for a capacitor to charge or discharge.\n",
     "\n",
     "![time-constants](./transducers-images/12_ch02_Fig08.jpg)\n",
     "\n",
-    "**Figure 3.** (a) A series RC circuit. Time response of circuit when the switch $S$ is (b) in position 1 or (b) in position 2.\n",
+    "**Figure 3.** (a) A series RC circuit. Time response of circuit when the switch $S$ is (b) in position 1 or (b) in position 2. Reproduced from Skoog.\n",
     "\n",
     "$$ i = I_{init} \\cdot e^{-\\frac{t}{RC}} $$\n",
     "$$ v_R = V_{intit} \\cdot e^{-\\frac{t}{RC}} $$\n"
@@ -142,7 +142,11 @@
     "\n",
     "![rc-filters](./transducers-images/17_ch02_Fig11.jpg)\n",
     "\n",
-    "**Figure 4.** Examples of (a) high-pass filter and a (b) low-pass filter."
+    "**Figure 4.** Examples of (a) high-pass filter and a (b) low-pass filter. Reproduced from Skoog.\n",
+    "\n",
+    "![filtered-signals](./transducers-images/18_ch02_Fig12a.jpg)\n",
+    "\n",
+    "**Figure 5.** Frequency response of low-pass and high-pass filters. For the low-pass filter, $R = 1 M \\Omega$ and $C = 1 \\mu F$. For the high-pass filter, $R = 10 k \\Omega$ and $C = 0.1 \\mu F$. Reproduced from Skoog."
    ]
   }
  ],
