Changes to be committed: 	modified:   canvas-pages/out/part-1.html 	modified:   canvas-pages/part-1.md 	modified:   notebooks/opamps.ipynb

--- a/notebooks/opamps.ipynb
+++ b/notebooks/opamps.ipynb
@@ -7,7 +7,13 @@
     "# Operational Amplifiers\n",
     "\n",
     "## Learning Objectives\n",
-    "*At the conclusion of in-class and outside learning, participants will be able to:*\n"
+    "*At the conclusion of in-class and outside learning, participants will be able to:*\n",
+    "- Define the fundamental operating principles of operational amplifiers.\n",
+    "- Calculate the linear operating range of a comparator, based on the gain and the voltage limits of the operational amplifier.\n",
+    "- Explain the benefit the high input impedance of an operational amplifier when used as a transducer of a chemical measurement.\n",
+    "\n",
+    "## Suggested Problems\n",
+    "- 3-1, 3-4, Example 3-1"
    ]
   },
   {
@@ -31,6 +37,8 @@
    "metadata": {},
    "source": [
     "## An Operational Amplifier is a *Differential Amplifier* with Very High *Gain*\n",
+    "\n",
+    "Operational amplifiers are used to precisely measure voltage, current, and resistance. Due to the importance of these electrical signals in chemical measurements, operational amplifiers are ubiquitous throughout chemical measurements. Operational amplifiers are are used are constant-current and constant-voltage sources in circuits. \n",
     "\n",
     "![Schematic of an operational amplifier](./op-amp-images/01_ch03_Fig01.jpg)\n",
     "\n",
