Changes to be committed: 	modified:   canvas-pages/out/part-1.html 	modified:   canvas-pages/part-1.md 	modified:   notebooks/sp-analog-and-digital-data.ipynb 	new file:   notebooks/sp-opamps.ipynb 	new file:   notebooks/sp-transducers.ipynb 	modified:   notebooks/transducers.ipynb

--- a/notebooks/sp-analog-and-digital-data.ipynb
+++ b/notebooks/sp-analog-and-digital-data.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "## 4-1\n",
     "\n",
-    "Convert each of the following decimal numbers to its binary equivalent.\n",
+    "> Convert each of the following decimal numbers to its binary equivalent.\n",
     "\n",
     "Consider the following:\n",
     "| $n$ | $2^n$ |\n",
@@ -103,7 +103,7 @@
    "source": [
     "## 4-2\n",
     "\n",
-    "Convert each of the decimal numbers in Problem 4-1 into BCD numbers.\n",
+    "> Convert each of the decimal numbers in Problem 4-1 into BCD numbers.\n",
     "\n",
     "Consider the following:\n",
     "\n",
@@ -143,7 +143,7 @@
    "source": [
     "## 4-3\n",
     "\n",
-    "Based on the results of problems 4-1 and 4-2, which is more efficient in expressing decimal numbers in the fewest number of bits, binary or BCD? Why is the less efficient coding scheme still useful.\n",
+    "> Based on the results of problems 4-1 and 4-2, which is more efficient in expressing decimal numbers in the fewest number of bits, binary or BCD? Why is the less efficient coding scheme still useful.\n",
     "\n",
     "Binary enables the expression of decimal numbers in the fewest number of bits. In BCD, only values 0000 to 1001 of each four bits are used to encode information; 1011 to 1111 are not used, which makes BCD less efficient with regards to bit usage. However, encoding decimal numbers with BCD and using a lookup table was very fast."
    ]
@@ -156,6 +156,8 @@
     "## 4-7 ##\n",
     "\n",
     "**(a)** $8 + 5$\n",
+    "\n",
+    "To add binary numbers, start from the rightmost digit and add each pair of digits as you would in decimal addition, but with the key rule that \"1 + 1\" yields \"0\" in that column and then carry a \"1\" to the next column to the left\n",
     "\n",
     "| Decimal | Binary |\n",
     "| ---: | ---: |\n",
@@ -170,7 +172,36 @@
     "| 339 | 101010011|\n",
     "| 25 | 11001 |\n",
     "| 364 | 101101100 |\n",
-    "\n"
+    "\n",
+    "**(c)** $47+16$\n",
+    "\n",
+    "| Decimal | Binary |\n",
+    "| ---: | ---: |\n",
+    "| 47 | 101111|\n",
+    "| 16 | 10000 |\n",
+    "| 63 | 111111 |\n",
+    "\n",
+    "**(d)** $2 \\cdot 9$\n",
+    "\n",
+    "Binary multiplication follows the same principles as decimal multiplication but uses only 1s and 0s - multiply each digit of one number by each digit of the other, shifting left for each place value, and add the results together.\n",
+    "\n",
+    "| Decimal | Binary |\n",
+    "| ---: | ---: |\n",
+    "| 2 | 10 |\n",
+    "| 9 | 1001 |\n",
+    "| 18 | 10010 |\n",
+    "\n",
+    "From right to left:\n",
+    "\n",
+    "$10 \\cdot 1 = 10 $ (no shift)\n",
+    "\n",
+    "$10 \\cdot 0 = 0 $ (shift one place value)\n",
+    "\n",
+    "$10 \\cdot 0 = 0 $ (shift two place values)\n",
+    "\n",
+    "$10 \\cdot 1 = 10 $ (shift three place values)\n",
+    "\n",
+    "$10 + 0 + 0 + 10000 = 10010 $\n"
    ]
   },
   {
@@ -179,6 +210,20 @@
    "source": [
     "\n",
     "## 4-8 ##\n",
+    "\n",
+    "> Three ADCs all have a range of 0 to 12 V and a digitization uncertainty of $\\pm 1$ LSB. What is the maximum uncertainty of a 10-V signal in the converts have:\n",
+    "\n",
+    "**(a)** 8 bits\n",
+    "\n",
+    "$uncertainty =  \\frac{12 \\, V}{2^8} = 0.47 \\, mV$\n",
+    "\n",
+    "**(b)** 12 bits\n",
+    "\n",
+    "$uncertainty =  \\frac{12 \\, V}{2^{12}} = 0.029 \\, mV$\n",
+    "\n",
+    "**(c)** 16 bits\n",
+    "\n",
+    "$uncertainty =  \\frac{12 \\, V}{2^{16}} = 0.00018 \\, mV$\n",
     "\n"
    ]
   },
@@ -187,7 +232,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 4-9 ##"
+    "## 4-9 ##\n",
+    "\n",
+    "> Repeat problem 4-8 if a 1.2 V signal is being digitized with the same three ADCs and the input signal is (a) not amplified and (b) amplified by 10 to bring it to full scale.\n",
+    "\n",
+    "The *absolute* uncertainty of the final voltage measurement will be identical to that in problem 4-8. For the unamplified signals, the uncertainties associated with the 3 ADCs will remain 0.47, 0.029, and 0.00018 V, respectively. When the signals are amplified, the uncertainties associated with the original signals will be 0.047, 0.0029, and 0.000018 mV, respectively."
    ]
   },
   {
@@ -196,7 +245,16 @@
    "source": [
     "\n",
     "## 4-11 ##\n",
-    "\n"
+    "\n",
+    "> ADCs digitize at different rates. What conversion rate is required if a chromatographic peak is to be sampled and digitized 25 times between the first positive deflection from the baseline until the peak returns to the baseline? The total baseline-to-baseline time is:\n",
+    "\n",
+    "**(a)** 20 s\n",
+    "\n",
+    "$sampling \\, frequency = \\frac{25 \\, samples}{20 \\, seconds} = 1.25 \\, samples \\cdot second^{-1} $\n",
+    "\n",
+    "**(b)** 1 s\n",
+    "\n",
+    "$sampling \\, frequency = \\frac{25 \\, samples}{1 \\, second} = 25 \\, samples \\cdot second^{-1} $"
    ]
   },
   {
@@ -204,7 +262,13 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 4-12 ##"
+    "## 4-12 ##\n",
+    "\n",
+    "> According to the Nyquist sampling criterion, a signal must be digitized at a rate at least twice that of the highest frequency in the signal to avoid a sampling error. If a particular 12-bit ADC has a conversion time of $5 \\, \\mu s$, what is the highest frequency that can be accurately digitized while satisfying the Nyquist criterion?\n",
+    "\n",
+    "$sampling \\, frequency = \\frac{1}{5 \\, \\mu s} = 200 \\, kHz $\n",
+    "\n",
+    "The highest frequency that will satisfy the Nyquist criterion is $100 \\, kHz$."
    ]
   }
  ],
