--- a/notebooks/transducers.ipynb
+++ b/notebooks/transducers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Electrical Components and Circuits\n",
+    "## Transducers, Electrical Components, and Circuits\n",
     "### Learning Objectives\n",
     "*At the conclusion of in-class and outside learning, participants will be able to:*\n",
     "- Define a transducer in an analytical instrument.\n",
@@ -12,7 +12,10 @@
     "- Using the laws of electricity, calculate values for electrical properties in direct-current circuits with resistors in series and parallel.\n",
     "- Describe the properties of an alternating-current circuits, including frequency and amplitude.\n",
     "- Calculate time constants for simple resistor-capacitor circuits. \n",
-    "- Compare and contrast high-pass and low-pass filters. Given the properties of a source of noise, select an appropriate filter."
+    "- Compare and contrast high-pass and low-pass filters. Given the properties of a source of noise, select an appropriate filter.\n",
+    "\n",
+    "### Suggest Problems\n",
+    "- 2-1, 2-6, 2-10, 2-14, 2-15"
    ]
   },
   {
