Changes to be committed: 	modified:   notebooks/signals-and-noise.ipynb 	new file:   notebooks/sp-signals-noise.ipynb

--- a/notebooks/signals-and-noise.ipynb
+++ b/notebooks/signals-and-noise.ipynb
@@ -15,7 +15,10 @@
     "- Based on results for standards that each contain an analyte at a known concentration, construct a calibration curve and determine a response function.\n",
     "- Calculate the concentration of an analyte in a sample, based on analysis of a sample and multiple external standards.\n",
     "- Describe the differences between deterministic and indeterministic errors.\n",
-    "- Based on results for replicate measurements using the same method, calculate the noise and the limit of detection of the method."
+    "- Based on results for replicate measurements using the same method, calculate the noise and the limit of detection of the method.\n",
+    "\n",
+    "## Suggested Problems\n",
+    "- 1-8, 1-10, 5-6, 5-7"
    ]
   },
   {
